# tournament

./: .gitattributes  .gitignore  README.md  pyproject.toml
.streamlit/: config.toml
ai_skills/: 01_understand_tournament.md  02_design_scoring_rules.md  03_prepare_probability_inputs.md  03_source_market_data.md  04_collect_expert_signals.md  04_model_the_field.md  05_model_the_field.md  05_run_strategy_simulation.md  06_explain_recommendations.md  06_simulate_tournament.md  07_adapt_to_new_tournament.md  07_build_risk_capped_portfolio.md  08_adapt_to_new_tournament.md  README.md
apps/: field_model_dashboard.py  market_dashboard.py  strategy_dashboard.py
docs/: README.md  adapting-a-new-tournament.md  architecture.md  data-contracts.md  function-map.md  market-inputs.md  publishing.md  quickstart.md  risk-strategy-playbook.md  simulation-method.md  source-research-playbook.md  ww2026-picks-through-j4.html
examples/basic_football_pool/: README.md  run_example.py
examples/basic_football_pool/config/: field_model.yaml  scoring.yaml  tournament.yaml
prediction_framework/: __init__.py  backward.py  diagnostics.py  expert_signals.py  field_model.py  probabilities.py  risk.py  schemas.py  scoring.py  simulation.py  sources.py  strategy.py  tournament.py
scripts/: build_field_model.py  build_inputs.py  build_probabilities.py  generate_readme_charts.py  generate_ww2026_pick_board.py  run_strategy.py
tests/: test_framework.py  test_scoring.py
