[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "football-prediction-framework"
version = "0.1.0"
description = "Reusable framework for football prediction contests and leaderboard strategy."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "streamlit>=1.39",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]
docs = [
    "matplotlib>=3.9",
    "pillow>=10",
    "seaborn>=0.13",
]

[tool.setuptools]
packages = ["prediction_framework"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = [
    "test_framework.py",
    "test_scoring.py",
]
